--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "fontsource-roboto": "^2.1.4",
     "rc-slider": "^9.3.1",
     "react": "^16.13.1",
+    "react-compound-slider": "^2.5.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "react-tooltip": "^4.2.7"
