--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "react": "^16.13.1",
     "react-compound-slider": "^2.5.0",
     "react-dom": "^16.13.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-router-native": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-switch": "^5.0.1",
     "react-tooltip": "^4.2.7"
@@ -40,5 +43,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
