--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "classnames": "^2.2.6",
     "d3": "^5.16.0",
     "fontsource-roboto": "^2.1.4",
+    "likert-react": "0.0.0-beta6",
     "rc-slider": "^9.3.1",
     "react": "^16.13.1",
     "react-compound-slider": "^2.5.0",
