--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "classnames": "^2.2.6",
     "d3": "^5.16.0",
     "fontsource-roboto": "^2.1.4",
-    "likert-react": "0.0.0-beta6",
     "rc-slider": "^9.3.1",
     "react": "^16.13.1",
     "react-compound-slider": "^2.5.0",
@@ -22,7 +21,8 @@
     "react-router-native": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-switch": "^5.0.1",
-    "react-tooltip": "^4.2.7"
+    "react-tooltip": "^4.2.7",
+    "survey-react": "^1.7.28"
   },
   "scripts": {
     "start": "react-scripts start",
