--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 
 # dependencies
 /node_modules
-./Client/node_modules
+/Client/node_modules/*
 /.pnp
 .pnp.js
 
@@ -28,3 +28,5 @@ yarn-error.log*
 src/assets/
 
 Client/node_modules/.bin/
+
+Client/node_modules/.cache/babel-loader/
