--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 
 # dependencies
 /node_modules
-/Client/node_modules/*
+Client/node_modules/
+
 /.pnp
 .pnp.js
 
@@ -26,8 +27,7 @@ yarn-error.log*
 .idea/
 
 src/assets/
-/Client/srs/assets/*
+Client/src/assets/
 
-Client/node_modules/.bin/
 
-Client/node_modules/.cache/babel-loader/
+
