--- a/package.json
+++ b/package.json
@@ -1,49 +1,34 @@
 {
   "name": "adex",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.19.2",
-    "classnames": "^2.2.6",
-    "d3": "^5.16.0",
-    "fontsource-roboto": "^2.1.4",
-    "rc-slider": "^9.3.1",
-    "react": "^16.13.1",
-    "react-compound-slider": "^2.5.0",
-    "react-dom": "^16.13.1",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-router-native": "^5.2.0",
-    "react-scripts": "3.4.1",
-    "react-switch": "^5.0.1",
-    "react-tooltip": "^4.2.7",
-    "survey-react": "^1.7.28"
-  },
+  "version": "1.0.0",
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "client": "npm start --prefix ./Client",
+    "server": "nodemon index.js",
+    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
+    "start": "NODE_ENV=production node index.js"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "proxy": "http://localhost:5000",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MartijnMillecamp/adex.git"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/MartijnMillecamp/adex/issues"
   },
-  "devDependencies": {}
+  "homepage": "https://github.com/MartijnMillecamp/adex#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.10.2"
+  },
+  "devDependencies": {
+    "concurrently": "^5.3.0",
+    "nodemon": "^2.0.4"
+  }
 }
