--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "fontsource-roboto": "^2.1.4",
     "rc-slider": "^9.3.1",
     "react": "^16.13.1",
+    "react-alert": "^7.0.2",
+    "react-alert-template-basic": "^1.0.0",
     "react-compound-slider": "^2.5.0",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
